# kwl-lexer

./: Cargo.toml  first draft.txt  idea.kwl
first_try/: error.rs  lexer.rs  lib.rs  token.rs
first_try/token/: assignment.rs  atom.rs  expression.rs  identifier.rs  literal.rs  operator.rs  statement.rs  term.rs  type.rs
src/: error.rs  lexer.rs  lib.rs  parser.rs
src/lexer/: atom.rs  comment.rs  function_identifier.rs  identifier.rs  keyword.rs  literal.rs  token.rs
src/lexer/literal/: float.rs  integer.rs  string.rs
src/parser/: binary_operator.rs  definition.rs  expression.rs  expression_tree.rs  function_body.rs  function_head.rs  identifier.rs  literal.rs  primitive_type.rs  root.rs  statement.rs  term.rs  type_identifier.rs  typed_variable.rs  unary_operator.rs  util.rs
