[package]
name = "kwl-lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
thiserror = "1.0.31"
# anyhow = "1.0.57"
# regex = "1.5.5"
# enum-ordinalize = "3.1.11"
once_cell = "1.10.0"
# tuples = "1.4.1"

[lib]
path = "src/lib.rs"